Fixing problem with opacity on iOS

--- a/src/sass/sections/_number.scss
+++ b/src/sass/sections/_number.scss
@@ -1,4 +1,4 @@
-.randomizer{
+.randomizer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,25 +13,25 @@
     width: 100%;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &--show{
+    &--show {
         margin-top: 0;
-    }
-
-    &--show .randomize__multiple {
-        visibility: visible;
-        opacity: 100%;
     }
 
     @media screen and (min-width: $tablet) {
         margin-top: -90px;
 
         &--show {
-                margin-top: 0;
-            }
+            margin-top: 0;
+        }
     }
 }
 
-.randomize__single{
+.hidden-multiple{
+    visibility: hidden;
+    opacity: 0;
+}
+
+.randomize__single {
     display: flex;
     flex-direction: column;
     background-color: #fff;
@@ -57,10 +57,7 @@
     }
 }
 
-.randomize__multiple{
-    visibility: hidden;
-    opacity: 0;
-
+.randomize__multiple {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +82,7 @@
         width: 80%;
     }
 
-    &--settings{
+    &--settings {
         display: flex;
         align-items: center;
         width: 100%;
@@ -101,11 +98,11 @@
     }
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
-.randomize__input-wrapper{
+.randomize__input-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -116,7 +113,7 @@
     background-color: #fff;
     box-shadow: $main-box-shadow;
 
-    &--amount{
+    &--amount {
         @media screen and (min-width:$tablet) {
             width: 92.75%;
         }
@@ -127,7 +124,7 @@
     }
 }
 
-.randomize__quantity{
+.randomize__quantity {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,6 +145,7 @@
     }
 
     @media (hover: hover) {
+
         &:hover,
         &:focus {
             color: #fff;
@@ -160,7 +158,7 @@
     }
 }
 
-.randomize__quantity--disabled{
+.randomize__quantity--disabled {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -185,7 +183,7 @@
 
 #random-from,
 #random-to,
-#random-amount{
+#random-amount {
     margin: 0 20px;
     padding: 15px;
     font-size: 16px;
@@ -199,7 +197,7 @@
 
 .randomize__input-wrapper:hover #random-from,
 .randomize__input-wrapper:hover #random-to,
-.randomize__input-wrapper:hover #random-amount{
+.randomize__input-wrapper:hover #random-amount {
     outline: none;
     border: 2px solid $input-border;
 }
@@ -209,12 +207,12 @@
 .randomize__input-wrapper:hover #random-amount:focus,
 #random-from:focus,
 #random-to:focus,
-#random-amount:focus{
+#random-amount:focus {
     outline: none;
     border: 2px solid $accent-color;
 }
 
-#sort-type{
+#sort-type {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -251,7 +249,7 @@
     margin-bottom: 10px;
 }
 
-.randomize__number{
+.randomize__number {
     font-size: 40px;
     font-weight: 700;
     color: $accent-color;
